--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,10 @@
 <html ng-app="redditClone" >
 	<head>
 		<title>A Reddit clone written in MEAN</title>
-		<link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
-		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js"></script>
+		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.12/angular.min.js"></script>
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.1.3/ui-bootstrap-tpls.min.js"></script>
 		<script src="/javascripts/angularApp.js"></script>
 		<style> .glyphicon-thumbs-up { cursor:pointer } </style>
 	</head>
@@ -38,6 +39,8 @@
 				<span class="glyphicon glyphicon-thumbs-up"
 				ng-click="incrementUpvotes(post)"></span>
 				{{post.upvotes}}
+				<span style="cursor:pointer" class="glyphicon glyphicon-thumbs-down"
+				ng-click="decrementUpvotes(post)"></span>
 				<span style="font-size:20px; margin-left:10px;">
 					<a ng-show="post.link" href="http://{{post.link}}" target="_blank">
 						{{post.title}}
@@ -54,9 +57,7 @@
 				</span>
 			</div>
 
-			<div ng-show="error" class="alert alert-danger row">
-				<span>{{ error }}</span>
-			</div>
+			<div uib-alert ng-show="error" class="alert-danger" close="closeAlert()">{{ error }}</div>
 
 			<div ng-hide="isLoggedIn()">
 				<h3>You need to <a href="/#/login">Log In</a> or <a href="/#/register">Register</a> before you can add a post.</h3>
@@ -96,15 +97,16 @@
 			<div ng-repeat="comment in post.comments | orderBy:'-upvotes'">
 				<span class="glyphicon glyphicon-thumbs-up"
 				ng-click="incrementUpvotes(comment)"></span>
-				{{comment.upvotes}} - by {{comment.author}}
+				{{comment.upvotes}}
+				<span style="cursor:pointer" class="glyphicon glyphicon-thumbs-down"
+				ng-click="decrementUpvotes(comment)"></span>
+				by {{comment.author}}
 				<span style="font-size:20px; margin-left:10px;">
 					{{comment.body}}
 				</span>
 			</div>
 
-			<div ng-show="error" class="alert alert-danger row">
-				<span>{{ error }}</span>
-			</div>
+			<div uib-alert ng-show="error" class="alert-danger" close="closeAlert()">{{ error }}</div>
 
 			<form ng-submit="addComment()" ng-show="isLoggedIn()" style="margin-top:30px;">
 				<h3>Add a new comment</h3>
