Display the number of comments on home page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -52,7 +52,7 @@
 						posted by {{post.author}} |
 					</span>
 					<span>
-						<a href="#/posts/{{post._id}}">Comments</a>
+						<a href="#/posts/{{post._id}}">Comments</a> ({{ post.comments.length }})
 					</span>
 				</span>
 			</div>
