--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,46 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+	padding: 50px;
+	font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 a {
-  color: #00B7FF;
+	color: #00B7FF;
+	text-decoration: none !important;
+}
+
+.alert-danger {
+	margin:10px 0px;
+}
+
+.item {
+	margin:30px 0px;
+}
+
+img.photo {
+	width: 70px;
+	height: 58px;
+	border: 0 none;
+}
+
+img.inside {
+	margin-top:20px;
+	width: 750px;
+	height: 754px;
+}
+
+.commentRow {
+	font-size: 15px;
+	margin: 25px 0px;
+}
+
+.comment {
+	margin-left: 10px;
+}
+
+.glyphicon-thumbs-down {
+	margin-right: 10px;
+}
+
+.login {
+	border-top: 1px solid #eee;
 }
